# fedora_platform

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  run.py  sitemap.xml
.agent-docs/: DECISIONS.md  STRUCTURE.md
.github/: copilot-instructions.md
.memory-bank/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
architecture/: index.html
components/: index.html
configuration/: index.html
configurations/: demo_sumo_baseline_config.json  demo_sumo_fixed_cycle_config.json  demo_sumo_max_pressure_config.json  demo_sumo_priority_pass_config.json  demo_sumo_priority_pass_full_state_config.json  sumo_priority_pass_demo_config.json  vienna_sumo_baseline_config.json  vienna_sumo_fixed_cycle_config.json  vienna_sumo_max_pressure_config.json  vienna_sumo_priority_pass_config.json
docs/: DECISIONS.md  INTEGRATIONS.md  STRUCTURE.md  architecture.md  components.md  configuration.md  evaluation.md  getting-started.md  index.md
evaluation/: index.html
example/: run_priority_pass.py
getting-started/: index.html
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
models/: README.md
post_processing/: __init__.py  priority_pass_analysis.py
scenarios/: README.md
search/: search_index.json
simple_b/: config.json  connector.py  controller_fixed_cycle.py  controller_max_pressure.py  controller_priority_pass.py  main.py  recorder.py  simulation.py  simulation_sumo.py
src/: connector.py  evaluator.py  (+7 more)
(+61 files in other folders)
