[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fedora-platform"
version = "0.1.0"
description = "FEDORA MTM Space research platform abstractions and pilots."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "FEDORA contributors" }
]
dependencies = []

[project.optional-dependencies]
priority-pass = [
  "numpy>=1.24",
  "sumolib==1.19.0",
  "traci==1.19.0",
]
communication-templates = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "uvicorn>=0.29",
  "web3>=6",
  "websockets>=12",
  "zeep>=4",
]
storage-templates = [
  "boto3>=1.34",
  "duckdb>=0.10",
  "psycopg>=3",
  "sqlalchemy>=2",
]

[tool.setuptools.packages.find]
where = ["src"]
